# palmier-pro-windows

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.preload.json  vite.config.ts  vitest.config.ts
docs/: PROJECT_PLAN.md  UPSTREAM_ISSUES.md
native/: .gitignore  Cargo.toml  package.json
native/src/: compositor.rs  geometry.rs  gpu.rs  lib.rs  pipeline.rs
native/src/shaders/: composite.wgsl
src/main/: index.ts  updater.ts
src/main/ai/: agent.ts  executor.ts  ipc.ts  mcp-server.ts  tools.ts
src/main/generation/: index.ts  provider-fal.ts  provider-higgsfield.ts  provider-replicate.ts  types.ts  util.ts
src/main/ipc/: autosave.ts  editor-sync.ts  media.ts  project.ts  system.ts
src/main/media/: audio-envelope.ts  exporter.ts  frame-decoder.ts  preview-compositor.ts
src/main/services/: exporter.ts  frame-extractor.ts
src/preload/: index.ts
src/renderer/: App.tsx
src/renderer/components/: ExportDialog.tsx  Inspector.tsx  MediaBin.tsx  Preview.tsx  PreviewCanvas.tsx  Timeline.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/renderer/engine/: PlaybackEngine.ts  playback-transport.ts  preview-engine.ts
src/renderer/hooks/: useAutosave.ts  useDragHandler.ts  useEditorSync.ts  useKeyboardShortcuts.ts  useSnapIndicator.ts
src/renderer/lib/: dnd.test.ts  dnd.ts
src/renderer/store/: ai.ts  project.ts  timeline.ts
src/renderer/styles/: index.css
src/shared/audio/: silence-detector.test.ts  silence-detector.ts
src/shared/editor/: blend-mode.test.ts  (+11 more)
(+18 files in other folders)
