[package]
name = "palmier-compositor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GPU-accelerated video compositor engine for Palmier Pro Windows"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
